feat: Agent 思考链可视化 — SSE thinking 事件 + 前端思考过程卡片
- SearchKnowledgeTool: 每次 apply() 记录 search 思考事件(query+hits)
- StreamContext: 新增 thinkingEvents 字段
- ChatResponse: 新增 thinkingEvents 字段(保留旧构造函数兼容)
- RAGServiceImpl: agentChat/agentChatStream 生成完整思考链(analyze→search→synthesize)
- RAGController: SSE 桥接层新增 thinking 事件推送(token流之前)
- api/index.ts: 新增 onThinking 回调 + thinking SSE 事件解析
- ChatView.vue: 渲染思考链卡片(emoji图标+文字+命中数)
- classifyQuestionForThinking(): 关键词零延迟问题分类